# advent-of-code

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
puzzles/aoc-2015-01/: README.rst  pyproject.toml
puzzles/aoc-2015-02/: README.rst  pyproject.toml
puzzles/aoc-2015-03/: README.rst  pyproject.toml
puzzles/aoc-2015-04/: README.rst  pyproject.toml
puzzles/aoc-2015-05/: README.rst  pyproject.toml
puzzles/aoc-2015-06/: README.rst  pyproject.toml
puzzles/aoc-2015-07/: README.rst  pyproject.toml
puzzles/aoc-2015-08/: README.rst  pyproject.toml
puzzles/aoc-2015-09/: README.rst  pyproject.toml
puzzles/aoc-2015-10/: README.rst  pyproject.toml
puzzles/aoc-2015-11/: README.rst  pyproject.toml
puzzles/aoc-2015-12/: README.rst  pyproject.toml
puzzles/aoc-2015-13/: README.rst  pyproject.toml
puzzles/aoc-2015-14/: README.rst  pyproject.toml
puzzles/aoc-2015-15/: README.rst  pyproject.toml
puzzles/aoc-2015-16/: README.rst  pyproject.toml
puzzles/aoc-2015-17/: README.rst  pyproject.toml
puzzles/aoc-2015-18/: README.rst  pyproject.toml
puzzles/aoc-2024-01/: README.rst  pyproject.toml
puzzles/aoc-2025-01/: README.rst  pyproject.toml
puzzles/aoc-2025-02/: README.rst  pyproject.toml
puzzles/aoc-2025-03/: README.rst  pyproject.toml
puzzles/aoc-2025-04/: README.rst  pyproject.toml
puzzles/aoc-2025-05/: README.rst  pyproject.toml
puzzles/aoc-2025-06/: README.rst  pyproject.toml
puzzles/aoc-2025-07/: README.rst  pyproject.toml
puzzles/aoc-2025-08/: README.rst  pyproject.toml
puzzles/aoc-2025-08/src/aoc_2025_08/: cleaned.py  part_1.py  part_2.py  test_solutions.py
puzzles/aoc-2025-09/: README.rst  pyproject.toml
puzzles/aoc-2025-10/: README.rst  pyproject.toml
puzzles/aoc-2025-11/: README.rst  pyproject.toml
puzzles/aoc-2025-12/: README.rst  pyproject.toml
src/2024/: README.rst
src/2024/python/day-13/: README.rst  pyproject.toml
src/2024/python/day-13/solver/: cleaned.py  part_1.py  part_2.py
src/2024/python/day-13/tests/: test_solver.py
src/advent_of_code/: __init__.py  utils.py
src/aoc-template/: pyproject.toml
src/aoc-template/aoc_template/: config.py  run.py  utils.py
src/aoc-template/templates/solver/: cleaned.py  part_1.py  utils.py
src/aoc-template/templates/tests/: test_solver.py
src/aoc-template/tests/: test_utils.py
src/aoc_template/: config.py  main.py  pyproject.toml  utils.py
src/aoc_template/templates/: README.rst  part_1.py  (+3 more)
tests/: test_puzzle_utils.py
(+206 files in other folders)
