[project]
name = "advent-of-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jahn Thomas Fidje", email = "jtfidje@gmail.com" }
]
requires-python = ">=3.14"

dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "advent_of_code"
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.2",
    "ty>=0.0.1a24",
]

[tool.uv.sources]
advent_of_code = { workspace = true }

[tool.uv.workspace]
members = [
    "src/aoc_template",
    "puzzles/*",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E4", "E5", "E7", "E9", "F"]
unfixable = ["F401", "F841"]
