[project]
name = "aoc-template"
version = "0.1.0"
description = "Template Script for Advent of Code"
authors = [
    { name = "Jahn Thomas Fidje", email = "jtfidje@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.2",
    "pydantic-settings>=2.6.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "rich>=13.9.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
select = ["E4", "E5", "E7", "E9", "F"]
line-length = 88

[tool.ruff.lint]
unfixable = ["F401", "F841"]
