[project]
name = "solver"
version = "0.1.0"
description = ""
authors = [
    { name = "Jahn Thomas Fidje", email = "jtfidje@gmail.com" }
]
readme = "README.rst"
requires-python = ">=3.13"
dependencies = [
    "sympy>=1.13.3",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
select = ["E4", "E5", "E7", "E9", "F"]
line-length = 88

[tool.ruff.lint]
unfixable = ["F401", "F841"]
